RESOLVED FIXED226305
Calling -[WKWebView _closeAllMediaPresentations] crashes
https://bugs.webkit.org/show_bug.cgi?id=226305
Summary Calling -[WKWebView _closeAllMediaPresentations] crashes
Peng Liu
Reported 2021-05-26 16:42:41 PDT
Calling -[WKWebView _closeAllMediaPresentations] crashes
Attachments
Patch (1.35 KB, patch)
2021-05-26 16:50 PDT, Peng Liu
no flags
Add an API test (3.94 KB, patch)
2021-05-26 17:37 PDT, Peng Liu
cdumez: review+
Fix a mistake in the API test (4.11 KB, patch)
2021-05-26 20:04 PDT, Peng Liu
no flags
Patch for landing (4.10 KB, patch)
2021-05-27 09:50 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2021-05-26 16:50:23 PDT
Peng Liu
Comment 2 2021-05-26 16:50:46 PDT
Chris Dumez
Comment 3 2021-05-26 16:51:30 PDT
Comment on attachment 429814 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=429814&action=review > Source/WebKit/ChangeLog:11 > + (-[WKWebView _closeAllMediaPresentations]): Can we write an API test for this?
Peng Liu
Comment 4 2021-05-26 16:56:06 PDT
Comment on attachment 429814 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=429814&action=review >> Source/WebKit/ChangeLog:11 >> + (-[WKWebView _closeAllMediaPresentations]): > > Can we write an API test for this? Yes. Let me add a test.
Peng Liu
Comment 5 2021-05-26 17:37:58 PDT
Created attachment 429819 [details] Add an API test
Peng Liu
Comment 6 2021-05-26 20:04:02 PDT
Created attachment 429831 [details] Fix a mistake in the API test
Eric Carlson
Comment 7 2021-05-27 08:42:26 PDT
Comment on attachment 429831 [details] Fix a mistake in the API test View in context: https://bugs.webkit.org/attachment.cgi?id=429831&action=review > Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewCloseAllMediaPresentations.mm:111 > + } while (true); I think it would be better to loop a fixed number of times so if the test fails rather than timings out if it doesn't exit from PiP for some reason.
Peng Liu
Comment 8 2021-05-27 09:46:58 PDT
Comment on attachment 429831 [details] Fix a mistake in the API test View in context: https://bugs.webkit.org/attachment.cgi?id=429831&action=review >> Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewCloseAllMediaPresentations.mm:111 >> + } while (true); > > I think it would be better to loop a fixed number of times so if the test fails rather than timings out if it doesn't exit from PiP for some reason. Agree. Actually this pattern is used multiple times in this file. Filed bug 226340 to fix all of them.
Peng Liu
Comment 9 2021-05-27 09:50:25 PDT
Created attachment 429888 [details] Patch for landing
EWS
Comment 10 2021-05-27 10:56:28 PDT
Committed r278169 (238213@main): <https://commits.webkit.org/238213@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429888 [details].
Note You need to log in before you can comment on or make changes to this bug.