Calling -[WKWebView _closeAllMediaPresentations] crashes https://bugs.webkit.org/show_bug.cgi?id=226305

Reviewed by Chris Dumez.

Source/WebKit:

Provide an empty completion handler to fix a crash.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _closeAllMediaPresentations]):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WKWebViewCloseAllMediaPresentations.mm:
(TEST):


Canonical link: https://commits.webkit.org/238213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278169 268f45cc-cd09-0410-ab3c-d52691b4dbfc